--- a/.github/workflows/style_check.yml
+++ b/.github/workflows/style_check.yml
@@ -15,7 +15,7 @@ jobs:
     name: vet and gofmt
     strategy:
       matrix:
-        go-version: [1.14.x, 1.15.x, 1.16.x]
+        go-version: [1.16.x]
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
